// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`StatCard > snapshot > should match snapshot when rendered with animation class 1`] = `
<div
  class="fade-in"
>
  <div
    class="rounded-xl border text-card-foreground shadow group relative overflow-hidden border-border/50 bg-card hover:border-border transition-all duration-300 hover:shadow-lg"
  >
    <div
      class="absolute top-0 right-0 w-32 h-32 bg-primary/5 rounded-full blur-3xl group-hover:scale-150 transition-transform duration-700"
    />
    <div
      class="space-y-1.5 p-6 relative flex flex-row items-start justify-between pb-2"
    >
      <div
        class="space-y-1 flex-1"
      >
        <div
          class="text-muted-foreground text-xs font-medium uppercase tracking-wider"
        >
          Total Tasks
        </div>
        <div
          class="text-3xl font-bold tracking-tight"
        >
          42
        </div>
      </div>
      <div
        class="opacity-20 group-hover:opacity-30 transition-opacity duration-300"
      >
        <div
          data-testid="check-circle-icon"
        />
      </div>
    </div>
    <div
      class="flex items-center p-6 relative pt-0"
    >
      <div
        class="flex items-center gap-2 text-xs text-muted-foreground"
      >
        <span
          class="font-medium"
        >
          +12% from last month
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`StatCard > snapshot > should match snapshot when rendered with typical data 1`] = `
<div
  class=""
>
  <div
    class="rounded-xl border text-card-foreground shadow group relative overflow-hidden border-border/50 bg-card hover:border-border transition-all duration-300 hover:shadow-lg"
  >
    <div
      class="absolute top-0 right-0 w-32 h-32 bg-primary/5 rounded-full blur-3xl group-hover:scale-150 transition-transform duration-700"
    />
    <div
      class="space-y-1.5 p-6 relative flex flex-row items-start justify-between pb-2"
    >
      <div
        class="space-y-1 flex-1"
      >
        <div
          class="text-muted-foreground text-xs font-medium uppercase tracking-wider"
        >
          Total Tasks
        </div>
        <div
          class="text-3xl font-bold tracking-tight"
        >
          42
        </div>
      </div>
      <div
        class="opacity-20 group-hover:opacity-30 transition-opacity duration-300"
      >
        <div
          data-testid="check-circle-icon"
        />
      </div>
    </div>
    <div
      class="flex items-center p-6 relative pt-0"
    >
      <div
        class="flex items-center gap-2 text-xs text-muted-foreground"
      >
        <span
          class="font-medium"
        >
          +12% from last month
        </span>
      </div>
    </div>
  </div>
</div>
`;
